fix font size issue on MobileSafari

--- a/playground/style.css
+++ b/playground/style.css
@@ -7,6 +7,7 @@
 body {
   overflow: hidden;
   font-size: 12px;
+  -webkit-text-size-adjust: none;
 }
 svg.icon path {
   stroke: black;
